@@ -15,6 +15,8 @@
 - Added overloaded implementation of Serializer::write_blob function.
 - fmt::config now delegates db parameter conversion to caller code.
 - Fixed Path::is_reg() method implementation for POSIX-based systems.
+- Fixed bug in the resource::Compressor and resource::Decompressor classes which could cause
+  file corruption at decompression stage.
 
 === 0.5.10 ===
 * Added support of boolean parameters by the configuration parser.
